update project title and enhance card styles for better visibility

--- a/src/src/project.html
+++ b/src/src/project.html
@@ -3,25 +3,27 @@
         <div class="columns is-desktop">
             <!-- Left side content (title, subtitle, description) -->
             <div class="column content-column modal-trigger" data-target="master-thesis-modal">
-                <h3 class="title is-4">Project Title</h3>
-                <h4 class="subtitle is-6">Project Subtitle or Category</h4>
+                <h3 class="title is-4">Master Thesis</h3>
+                <h4 class="subtitle is-6">Multi-period Optimal Power Flow with Physics-informed Graph Neural Networks
+                </h4>
                 <div class="description">
-                    <p>This is a detailed description of the project. It explains what the project is about, the
-                        challenges faced, and the solutions implemented. The text will wrap naturally and maintain
-                        readability across device sizes.</p>
+                    <p>Designed and implemented and physics-informed graph neural network to solve the multi-period
+                        optimal power flow problem with unit commitment. Showed promising results on small grids when
+                        compared to traditional solvers.</p>
                 </div>
             </div>
 
             <!-- Right side content (image and tags) -->
             <div class="column image-column">
                 <figure class="project-image">
-                    <img src="img/kelvin_helmholtz_titel.png" alt="Project Image">
+                    <img src="img/PIGNN.svg" alt="Project Image">
                 </figure>
                 <div class="tags">
-                    <span class="tag">HTML</span>
-                    <span class="tag">CSS</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Bulma</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">PyTorch</span>
+                    <span class="tag">Torch Geometric</span>
+                    <span class="tag">Gurobi</span>
+                    <span class="tag">Matpower</span>
                 </div>
             </div>
         </div>
@@ -33,13 +35,50 @@
         <div class="columns is-desktop">
             <!-- Left side content (title, subtitle, description) -->
             <div class="column content-column">
-                <p class="title is-4">Project Title 2</p>
-                <p class="subtitle is-6">Project Subtitle or Category</p>
+                <p class="title is-4">Bachelor Thesis</p>
+                <p class="subtitle is-6">An Efficient Boundary-Respecting Streamfunction-Vorticity Solver</p>
                 <div class="description">
-                    <p>This is a detailed description of the project. It explains what the project is about, the
-                        challenges faced, and the solutions implemented. The text will wrap naturally and maintain
-                        readability across device sizes.</p>
+                    <p>Developed a novel numerical solver for 2D fluid dynamics using streamfunction-vorticity
+                        formulation and discrete exterior calculus, reducing numerical dissipation common in computer
+                        graphics applications. Implemented support for non-uniform grids and parametrized viscosity for
+                        diverse fluid simulation.
+                    </p>
                 </div>
+            </div>
+
+            <!-- Right side content (image and tags) -->
+            <div class="column image-column">
+                <figure class="project-image">
+                    <img src="img/kelvin_helmholtz_titel.png" alt="Project Image">
+                </figure>
+                <div class="tags">
+                    <span class="tag">C++ / Eigen</span>
+                    <span class="tag">Discrete Exterior Calcus</span>
+                    <span class="tag">Fluid Dynamics</span>
+                    <span class="tag">Finite Difference Method</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card project-card">
+    <div class="card-content">
+        <div class="columns is-desktop">
+            <!-- Left side content (title, subtitle, description) -->
+            <div class="column content-column">
+                <p class="title is-4">Semester Thesis</p>
+                <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                    Satellite Images
+                </p>
+                <p>
+                    Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                    imagery,
+                    analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                    measurements to
+                    surface reflectance values.
+
+                </p>
             </div>
 
             <!-- Right side content (image and tags) -->
@@ -48,16 +87,183 @@
                     <img src="img/SCL_BRA.png" alt="Project Image">
                 </figure>
                 <div class="tags">
-                    <span class="tag">HTML</span>
-                    <span class="tag">CSS</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Bulma</span>
-                    <span class="tag">Others</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">Rasterio/GDAL</span>
+                    <span class="tag">Scikit-learn</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<div class="card project-card">
+    <div class="card-content">
+        <div class="columns is-desktop">
+            <!-- Left side content (title, subtitle, description) -->
+            <div class="column content-column">
+                <p class="title is-4">Conference Paper</p>
+                <p class="subtitle is-6">Low-Cost Sensor Node for Air Quality Monitoring</p>
+                <p>
+                    Implemented the software infrastructure for a mobile air quality monitoring system, including
+                    MicroPython-based sensor control, LoRa/LTE telemetry, and ThingsBoard-based data visualization
+                    platform.
+                </p>
+                <p>
+                <ul>
+                    <li>Internet Of Things</li>
+                    <li>Air Quality Monitoring</li>
+                    <li>Low-Cost Sensor Node</li>
+                </ul>
+                </p>
+            </div>
+
+            <!-- Right side content (image and tags) -->
+            <div class="column image-column">
+                <figure class="project-image">
+                    <img src="img/Sensorbox.png" alt="Project Image">
+                </figure>
+                <div class="tags">
+                    <span class="tag">MicroPython</span>
+                    <span class="tag">LoRaWAN</span>
+                    <span class="tag">MQTT</span>
+                    <span class="tag">Thingsboard</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="fixed-grid has-1-cols-tablet has-2-cols-desktop">
+    <div class="grid">
+        <div class="cell">
+            <div class="card project-card">
+                <div class="card-content">
+                    <div class="columns is-desktop">
+                        <!-- Left side content (title, subtitle, description) -->
+                        <div class="column content-column">
+                            <p class="title is-4">Conference Paper</p>
+                            <p class="subtitle is-6">Low-Cost Sensor Node for Air Quality Monitoring</p>
+                            <p>
+                                Implemented the software infrastructure for a mobile air quality monitoring system,
+                                including
+                                MicroPython-based sensor control, LoRa/LTE telemetry, and ThingsBoard-based data
+                                visualization
+                                platform.
+                            </p>
+                            <p>
+                            <ul>
+                                <li>Internet Of Things</li>
+                                <li>Air Quality Monitoring</li>
+                                <li>Low-Cost Sensor Node</li>
+                            </ul>
+                            </p>
+                        </div>
+
+                        <!-- Right side content (image and tags) -->
+                        <div class="column image-column">
+                            <figure class="project-image">
+                                <img src="img/Sensorbox.png" alt="Project Image">
+                            </figure>
+                            <div class="tags">
+                                <span class="tag">MicroPython</span>
+                                <span class="tag">LoRaWAN</span>
+                                <span class="tag">MQTT</span>
+                                <span class="tag">Thingsboard</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cell">
+            <div class="card project-card">
+                <div class="card-content">
+                    <div class="columns is-desktop">
+                        <!-- Left side content (title, subtitle, description) -->
+                        <div class="column content-column">
+                            <p class="title is-4">Conference Paper</p>
+                            <p class="subtitle is-6">Low-Cost Sensor Node for Air Quality Monitoring</p>
+                            <p>
+                                Implemented the software infrastructure for a mobile air quality monitoring system,
+                                including
+                                MicroPython-based sensor control, LoRa/LTE telemetry, and ThingsBoard-based data
+                                visualization
+                                platform.
+                            </p>
+                            <p>
+                            <ul>
+                                <li>Internet Of Things</li>
+                                <li>Air Quality Monitoring</li>
+                                <li>Low-Cost Sensor Node</li>
+                            </ul>
+                            </p>
+                        </div>
+
+                        <!-- Right side content (image and tags) -->
+                        <div class="column image-column">
+                            <figure class="project-image">
+                                <img src="img/Sensorbox.png" alt="Project Image">
+                            </figure>
+                            <div class="tags">
+                                <span class="tag">MicroPython</span>
+                                <span class="tag">LoRaWAN</span>
+                                <span class="tag">MQTT</span>
+                                <span class="tag">Thingsboard</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cell">
+            <div class="card project-card">
+                <div class="card-content">
+                    <div class="columns is-desktop">
+                        <!-- Left side content (title, subtitle, description) -->
+                        <div class="column content-column">
+                            <p class="title is-4">Conference Paper</p>
+                            <p class="subtitle is-6">Low-Cost Sensor Node for Air Quality Monitoring</p>
+                            <p>
+                                Implemented the software infrastructure for a mobile air quality monitoring system,
+                                including
+                                MicroPython-based sensor control, LoRa/LTE telemetry, and ThingsBoard-based data
+                                visualization
+                                platform.
+                            </p>
+                            <p>
+                            <ul>
+                                <li>Internet Of Things</li>
+                                <li>Air Quality Monitoring</li>
+                                <li>Low-Cost Sensor Node</li>
+                            </ul>
+                            </p>
+                        </div>
+
+                        <!-- Right side content (image and tags) -->
+                        <div class="column image-column">
+                            <figure class="project-image">
+                                <img src="img/Sensorbox.png" alt="Project Image">
+                            </figure>
+                            <div class="tags">
+                                <span class="tag">MicroPython</span>
+                                <span class="tag">LoRaWAN</span>
+                                <span class="tag">MQTT</span>
+                                <span class="tag">Thingsboard</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 
 <div class="tile is-ancestor">
