add new project documents and update links in project.html

--- a/src/src/project.html
+++ b/src/src/project.html
@@ -35,7 +35,7 @@
             </span>
             <span>GitHub</span>
         </a>
-        <a href="docs/master_thesis.pdf" class="card-footer-item">
+        <a href="docs/MasterThesis_TomLausberg.pdf" target="_blank" class="card-footer-item">
             <span class="icon">
                 <i class="far fa-file-pdf"></i>
             </span>
@@ -75,7 +75,8 @@
         </div>
     </div>
     <footer class="card-footer">
-        <a href="docs/master_thesis.pdf" class="card-footer-item">
+        <a href="docs/Tom_Lausberg_Bachelor_Arbeit_An_Efficient_Streamfunction-Vorticity_Solver_for_the_Simulation_of_Viscous_FLuids (1).pdf"
+            target="_blank" class="card-footer-item">
             <span class="icon">
                 <i class="far fa-file-pdf"></i>
             </span>
@@ -123,7 +124,7 @@
             </span>
             <span>GitHub</span>
         </a>
-        <a href="docs/master_thesis.pdf" class="card-footer-item">
+        <a href="docs/Semester_Thesis_Tom_Lausberg_signed.pdf" class="card-footer-item">
             <span class="icon">
                 <i class="far fa-file-pdf"></i>
             </span>
@@ -169,7 +170,7 @@
         </div>
     </div>
     <footer class="card-footer">
-        <a href="docs/master_thesis.pdf" class="card-footer-item">
+        <a href="https://link.springer.com/chapter/10.1007/978-3-030-98423-6_4" class="card-footer-item">
             <span class="icon">
                 <i class="far fa-file-pdf"></i>
             </span>
@@ -200,7 +201,7 @@
                     <!-- Right side content -->
                     <div class="column image-column">
                         <figure class="project-image">
-                            <img src="img/Sensorbox.png" alt="Project Image">
+                            <img src="img/Finot.jpg" alt="Project Image">
                         </figure>
                         <div class="tags">
                             <span class="tag">Python</span>
@@ -251,7 +252,7 @@
                 </div>
             </div>
             <footer class="card-footer">
-                <a href="docs/master_thesis.pdf" class="card-footer-item">
+                <a href="docs/ASL_Report.pdf" class="card-footer-item">
                     <span class="icon">
                         <i class="far fa-file-pdf"></i>
                     </span>
@@ -294,7 +295,7 @@
                 </div>
             </div>
             <footer class="card-footer">
-                <a href="docs/master_thesis.pdf" class="card-footer-item">
+                <a href="docs/HPC4WC_project.pdf" class="card-footer-item">
                     <span class="icon">
                         <i class="far fa-file-pdf"></i>
                     </span>
@@ -339,12 +340,6 @@
                         <i class="fab fa-github"></i>
                     </span>
                     <span>GitHub</span>
-                </a>
-                <a href="docs/master_thesis.pdf" class="card-footer-item">
-                    <span class="icon">
-                        <i class="far fa-file-pdf"></i>
-                    </span>
-                    <span>PDF</span>
                 </a>
             </footer>
         </div>
