comment out footer and script sections in index.html

--- a/src/src/index.html
+++ b/src/src/index.html
@@ -208,18 +208,18 @@
     </section>
 
 
-    <%= require('./modals.html') %>
+    <!-- <%= require('./modals.html') %> -->
 
-        <footer class="footer">
+    <!-- <footer class="footer">
             <div class="content has-text-centered">
                 <p>
                     <a href="https://github.com/mmacneil/devfolio" target="_blank" class="icon has-text-primary">
                         <i class="fab fa-github"></i> <strong>devfolio</strong></a>
                 </p>
             </div>
-        </footer>
+        </footer> -->
 
-        <!-- <script src="/js/bundle.js"></script> -->
+    <!-- <script src="/js/bundle.js"></script> -->
 </body>
 
 </html>
